--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "me",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.18.0",
     "express": "^4.15.4",
     "mongoose": "^4.11.11",
     "morgan": "^1.8.2"
